# CBOR-RPC-DeviceControl

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  README.md
.cursor/rules/: python.mdc  repo.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
Device/: .mxproject  CMakeLists.txt  Device.ioc  STM32F746XX_FLASH.ld
Device/Core/Inc/: comm.h  default_image_rgb565.h  image.h  image_rgb565.h  stm32f7xx_it.h
Device/Core/Src/: comm.c  image.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Device/cmake/stm32cubemx/: CMakeLists.txt
Host/: pyproject.toml
Host/cbor_host/: cli.py
Host/tests/: test_cbor_host.py
Scripts/: device.resc  make-image-header.py
