[project]
name = "cbor-host"
version = "0.1"
description = "CBOR Host"
readme = "README.md"
authors = [{name = "R. Keelan"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "click",
    "pyserial",
    "cbor2"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
Run-Host = "cbor_host.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff"]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Enable essential rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
# Sort imports
known-first-party = [""]